Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13920

HSM: hsm_actions are not processed after MDS failover

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      After each MDS failover following message could be seen:

      (mdt_coordinator.c:1116:mdt_hsm_cdt_start()) lustre-MDT0000: cannot take the layout locks needed for registered restore: -2  

      This error means that coordinator doesn't process hsm_actions list after failover.
      In several words the problem is caused by the race config llog processing during MDS mount. Config params that causes to start coordinator and handle hsm_actions list is processed before MDD that initializes hsm llog(mdd_prepare->mdd_hsm_actions_llog_init).

      Above error message could be seen after sanity-hsm_407 that does MDS failover.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: